[gd_scene load_steps=61 format=2]

[ext_resource path="res://assets/Imports/World/FontsAndButtons/LOTUS-Title-sheet.png" type="Texture" id=1]
[ext_resource path="res://src/Environment/GameMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/Imports/World/FontsAndButtons/Start.png" type="Texture" id=3]
[ext_resource path="res://assets/Imports/World/256x256/Dirt/Dirt_02-256x256.png" type="Texture" id=4]
[ext_resource path="res://assets/Imports/World/FontsAndButtons/Scores.png" type="Texture" id=5]
[ext_resource path="res://assets/Imports/World/FontsAndButtons/Tutorial.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 104, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 208, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 312, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 416, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 520, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 624, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 728, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 832, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 936, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 1040, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 1144, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 1248, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 1352, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 1456, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 1560, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 1664, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 1768, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 1872, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 1976, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 2080, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 2184, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 2288, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 2392, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 2496, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 2600, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 2704, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 2808, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 2912, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 3016, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 3120, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 3224, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 3328, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 3432, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 3536, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 3640, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 3744, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 3848, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 3952, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 4056, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 4160, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 4264, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 4368, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 4472, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 4576, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 4680, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 4784, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 4888, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 4992, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 5096, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 5200, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 5304, 0, 104, 7 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 5408, 0, 104, 7 )

[sub_resource type="SpriteFrames" id=54]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "TitleScroll",
"speed": 5.0
} ]

[node name="GameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.0431373, 0.0392157, 0.0392157, 1 )
position = Vector2( 320, 180 )
scale = Vector2( 2.5, 1.40625 )
texture = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 320, 64 )
scale = Vector2( 5, 5 )
frames = SubResource( 54 )
animation = "TitleScroll"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -239.5
margin_top = 1.0
margin_right = 239.5
margin_bottom = 57.0
custom_constants/separation = 48

[node name="BeginButton" type="Button" parent="HBoxContainer"]
margin_right = 127.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true
__meta__ = {
"_editor_description_": ""
}

[node name="TutorialButton" type="Button" parent="HBoxContainer"]
margin_left = 175.0
margin_right = 303.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
icon = ExtResource( 6 )
icon_align = 1
expand_icon = true

[node name="ScoresButton" type="Button" parent="HBoxContainer"]
margin_left = 351.0
margin_right = 479.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
icon = ExtResource( 5 )
icon_align = 1
expand_icon = true

[connection signal="pressed" from="HBoxContainer/BeginButton" to="." method="_on_BeginButton_pressed"]
[connection signal="pressed" from="HBoxContainer/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="HBoxContainer/ScoresButton" to="." method="_on_ScoresButton_pressed"]
